--- a/index.htm
+++ b/index.htm
@@ -22,10 +22,10 @@
 	
 <p>Welcome To The Rocks Store - where you can buy any kind of Rock that you can ever think of.  <br/> Whether it's a moon rock, martian rock, a rock the size of The Empire State building or a little tiny river rock. <br/> If we don't have it, we'll go to the moon, the next planet, or the next galaxy to get it for you!</p>
 <nav>
-           <ul> <style="background-color: white">
-                <li><a href="index.htm">Home</a></li>
-                <li><a href="spacerocks.html">Space Rocks</a></li>
-                <li><a href="riverrocks.html">River Rocks</a></li>
+           <ul> 
+                <li><a href="index.html">Home</a></li>
+                <li><a href="spacerocks.html">spacerocks</a></li>
+                <li><a href="riverrocks.html">riverrocks</a></li>
                 
             </ul>
         </nav>
@@ -33,15 +33,15 @@
 	
 	<img src= "ImagesSpacerocks/image5Comet.jpg" alt="Comet" style="width: 615px; height: 440px;" align="center"/>
 	
-	<img src= "Images/IgneousRocks.jpeg" style="width: 615px; height: 440px;" align="center"/>
+	<img src= "Images/IgneousRocks.jpeg" alt="Igneous Rock" style="width: 615px; height: 440px;" align="center"/>
 	
 	<img src= "ImagesSpacerocks/image2Asteroid.jpg" alt="Asteroid" style="width: 615px; height: 440px;" align="center"/>
 	
-	<img src= "Images/RocksImageLogo.png" alt="Rocks Image Logo" style="width: 615px; height: 440px;" align="center"/>
+	<img src= "RocksImageLogo.jpg" alt="Rocks Image Logo" style="width: 615px; height: 440px;" align="center"/>
 	
 	<img src= "ImagesRiverRocks/Image5SlateRocks.jpg" alt="Slate Rocks" style="width: 615px; height: 440px;" align="center">
 	
-	<img src= "2-2-rock-png-file.png" style="width: 615px; height: 440px;" align="center"/>
+	<img src= "2-2-rock-png-file.png" alt="face rock" style="width: 615px; height: 440px;" align="center"/>
 	
 	<img src= "ImagesRiverRocks/Image4CountryPebbles.jpg" alt="Country Pebbles" style="width: 615px; height: 440px;" align="center"/>
 	
@@ -53,7 +53,7 @@
 </head>
 <nav>
 <ul>
-    <li><a href="index.htm">Home</a></li>
+    <li><a href="index.html">Home</a></li>
     <li><a href="spacerocks.html">Space Rocks</a></li>
 	<li><a href="riverrocks.html">River Rocks</a></li>
   </ul>
