--- a/riverrocks.html
+++ b/riverrocks.html
@@ -35,9 +35,9 @@
         <th>Eldorado Stones $25/sq./ft.</th>
     </tr>
     <tr>
-        <td align="center"> <img src= "ImagesRiverRocks/image1steppingstone.jpg" alt="SteppineStone" style="width: 250px; height: 250px;"></td>
-        <td align="center"> <img src= "ImagesRiverRocks/image2decorative.jpg" alt="Decorative" style="width: 250px; height: 250px;"></td>
-        <td align="center"> <img src= "ImagesRiverRocks/image3eldoradostone.jpg" alt="EldoradoStone" style="width: 250px; height: 250px;"></td>
+        <td align="center"> <img src= "ImagesRiverRocks/Image1steppingstone.jpg" alt="SteppingStone" style="width: 250px; height: 250px;"></td>
+        <td align="center"> <img src= "ImagesRiverRocks/Image2decorative.jpg" alt="Decorative" style="width: 250px; height: 250px;"></td>
+        <td align="center"> <img src= "ImagesRiverRocks/Image3eldoradostone.jpg" alt="EldoradoStone" style="width: 250px; height: 250px;"></td>
     </tr>
     <tr>
         <td align="center">River Rock Stepping Stones. A set of three sells for $29.95.<br> Each stone is 14" dia. x -1/2"H. 
