--- a/index.htm
+++ b/index.htm
@@ -33,7 +33,7 @@
 	
 	<img src= "ImagesSpacerocks/image5Comet.jpg" alt="Comet" style="width: 615px; height: 440px;" align="center"/>
 	
-	<img src= "Images/IgneousRocks.jpeg" alt="Igneous Rock" style="width: 615px; height: 440px;" align="center"/>
+	<img src= "IgneousRocks.jpeg" alt="Igneous Rock" style="width: 615px; height: 440px;" align="center"/>
 	
 	<img src= "ImagesSpacerocks/image2Asteroid.jpg" alt="Asteroid" style="width: 615px; height: 440px;" align="center"/>
 	
