--- a/riverrocks.html
+++ b/riverrocks.html
@@ -35,7 +35,7 @@
         <th>Eldorado Stones $25/sq./ft.</th>
     </tr>
     <tr>
-        <td align="center"> <img src= "ImagesRiverRocks/Image1steppingstone.jpg" alt="SteppingStone" style="width: 250px; height: 250px;"></td>
+        <td align="center"> <img src= "Image1steppingstone.jpg" alt="SteppingStone" style="width: 250px; height: 250px;"></td>
         <td align="center"> <img src= "ImagesRiverRocks/Image2decorative.jpg" alt="Decorative" style="width: 250px; height: 250px;"></td>
         <td align="center"> <img src= "ImagesRiverRocks/Image3eldoradostone.jpg" alt="EldoradoStone" style="width: 250px; height: 250px;"></td>
     </tr>
