--- a/riverrocks.html
+++ b/riverrocks.html
@@ -18,8 +18,8 @@
     River Rocks
   </h2>
   <ul>
-    <li><a href="index.htm">Home</a></li>
-    <li><a href="spacerocks.html">Space Rocks</a></li>
+    	<li><a href="index.htm">Home</a></li>
+    	<li><a href="spacerocks.html">Space Rocks</a></li>
 	<li><a href="riverrocks.html">River Rocks</a></li>
   </ul>
 
@@ -35,7 +35,7 @@
         <th>Eldorado Stones $25/sq./ft.</th>
     </tr>
     <tr>
-        <td align="center"> <img src= "Image1steppingstone.jpg" alt="SteppingStone" style="width: 250px; height: 250px;"></td>
+        <td align="center"> <img src= "ImagesRiverRocks/Image1steppingstone.jpg" alt="SteppingStone" style="width: 250px; height: 250px;"></td>
         <td align="center"> <img src= "ImagesRiverRocks/Image2decorative.jpg" alt="Decorative" style="width: 250px; height: 250px;"></td>
         <td align="center"> <img src= "ImagesRiverRocks/Image3eldoradostone.jpg" alt="EldoradoStone" style="width: 250px; height: 250px;"></td>
     </tr>
