--- a/index.htm
+++ b/index.htm
@@ -23,7 +23,7 @@
 <p>Welcome To The Rocks Store - where you can buy any kind of Rock that you can ever think of.  <br/> Whether it's a moon rock, martian rock, a rock the size of The Empire State building or a little tiny river rock. <br/> If we don't have it, we'll go to the moon, the next planet, or the next galaxy to get it for you!</p>
 <nav>
            <ul> 
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index.htm">Home</a></li>
                 <li><a href="spacerocks.html">spacerocks</a></li>
                 <li><a href="riverrocks.html">riverrocks</a></li>
                 
@@ -53,7 +53,7 @@
 </head>
 <nav>
 <ul>
-    <li><a href="index.html">Home</a></li>
+    <li><a href="index.htm">Home</a></li>
     <li><a href="spacerocks.html">Space Rocks</a></li>
 	<li><a href="riverrocks.html">River Rocks</a></li>
   </ul>
