--- a/index.htm
+++ b/index.htm
@@ -24,8 +24,8 @@
 <nav>
            <ul> 
                 <li><a href="index.htm">Home</a></li>
-                <li><a href="spacerocks.html">spacerocks</a></li>
-                <li><a href="riverrocks.html">riverrocks</a></li>
+                <li><a href="spacerocks.html">Spacerocks</a></li>
+                <li><a href="riverrocks.html">Riverrocks</a></li>
                 
             </ul>
         </nav>
