--- a/spacerocks.html
+++ b/spacerocks.html
@@ -52,7 +52,7 @@
     </tr>
 	<tr>
 		<th> Asteroid Belt Rock under $50 billion</th>
-        <th> Comet Rock under $50 billion</th>
+        <th> Comet Rock over $50 billion</th>
         <th> Moon Rocks in stock- price range $30-$600</th>
     </tr>
     <tr>
