--- a/index.htm
+++ b/index.htm
@@ -10,7 +10,7 @@
 		
 <title>The Rocks Store</title>
   <link rel="stylesheet" type="text/css" href="style.css" />
-  <meta name="description" content="Stortemplate">
+  <meta name="MyStore" content="The Rocks Store">
 
 </head>
 
