--- a/index.htm
+++ b/index.htm
@@ -10,7 +10,7 @@
 		
 <title>The Rocks Store</title>
   <link rel="stylesheet" type="text/css" href="style.css" />
-  <meta name="MyStore" content="The Rocks Store">
+  <meta name="description" content="Stortemplate">
 
 </head>
 
@@ -20,16 +20,18 @@
 <body>
 	<h1>THE ROCKS STORE</h1
 	
-<p>Welcome To The Rocks Store - where you can buy any kind of Rock that you can ever think of.  <br/> Whether it's a moon rock, martian rock, a rock the size of The Empire State building or a little tiny river rock. <br/> If we don't have it, we'll go to the moon, the next planet, or the next galaxy to get it for you!</p>
+<p> <h2 style="text-align: center" Welcome To The Rocks Store - where you can buy any kind of Rock that you can ever think of.  <br/> Whether it's a moon rock, martian rock, a rock the size of The Empire State building or a little tiny river rock. <br/> If we don't have it, we'll go to the moon, the next planet, or the next galaxy to get it for you!<h2></p>
+
+
 <nav>
            <ul> 
                 <li><a href="index.htm">Home</a></li>
                 <li><a href="spacerocks.html">Space Rocks</a></li>
                 <li><a href="riverrocks.html">River Rocks</a></li>
-                
+                <li><a href="contactpage.html">Contact Us!</a></li>
             </ul>
         </nav>
-	<img src= "TheRocksLogo2.png" alt="The Rocks Logo2" max width= "100%" height="200" align="center"/>
+	<img src= "TheRocksLogo3blue.png" alt="The Rocks Logo2" max width= "100%" height="100" align="center"/>
 	
 	<img src= "ImagesSpacerocks/image5Comet.jpg" alt="Comet" style="width: 615px; height: 440px;" align="center"/>
 	
@@ -56,6 +58,7 @@
     <li><a href="index.htm">Home</a></li>
     <li><a href="spacerocks.html">Space Rocks</a></li>
 	<li><a href="riverrocks.html">River Rocks</a></li>
+	<li><a href="contactpage.html">Contact Us!</a></li>
   </ul>
 	</nav>
 
