Assignment 4 2nd try, didn't get it all on 1st upload

--- a/riverrocks.html
+++ b/riverrocks.html
@@ -18,10 +18,13 @@
     River Rocks
   </h2>
   <ul>
-    	<li><a href="index.htm">Home</a></li>
-    	<li><a href="spacerocks.html">Space Rocks</a></li>
+    <li><a href="index.htm">Home</a></li>
+    <li><a href="spacerocks.html">Space Rocks</a></li>
 	<li><a href="riverrocks.html">River Rocks</a></li>
+	<li><a href="contactpage.html">Contact Us!</a></li>
   </ul>
+  
+  <img src= "TheRocksLogo3blue.png" alt="The Rocks Logo2" max width= "100%" height="75" align="center"/>
 
   </header>
 
@@ -35,9 +38,9 @@
         <th>Eldorado Stones $25/sq./ft.</th>
     </tr>
     <tr>
-        <td align="center"> <img src= "ImagesRiverRocks/Image1SteppingStone.jpg" alt="Stepping Stone" style="width: 250px; height: 250px;"></td>
+        <td align="center"> <img src= "ImagesRiverRocks/Image1SteppingStone.jpg" alt="SteppingStone" style="width: 250px; height: 250px;"></td>
         <td align="center"> <img src= "ImagesRiverRocks/Image2Decorative.jpg" alt="Decorative" style="width: 250px; height: 250px;"></td>
-        <td align="center"> <img src= "ImagesRiverRocks/Image3EldoradoStone.jpg" alt="Eldorado Stone" style="width: 250px; height: 250px;"></td>
+        <td align="center"> <img src= "ImagesRiverRocks/Image3EldoradoStone.jpg" alt="EldoradoStone" style="width: 250px; height: 250px;"></td>
     </tr>
     <tr>
         <td align="center">River Rock Stepping Stones. A set of three sells for $29.95.<br> Each stone is 14" dia. x -1/2"H. 
@@ -75,6 +78,7 @@
     <li><a href="index.htm">Home</a></li>
     <li><a href="spacerocks.html">Space Rocks</a></li>
 	<li><a href="riverrocks.html">River Rocks</a></li>
+	<li><a href="contactpage.html">Contact Us!</a></li>
   </ul>
 	</nav>
 </div>
