--- a/spacerocks.html
+++ b/spacerocks.html
@@ -22,8 +22,11 @@
     <li><a href="index.htm">Home</a></li>
     <li><a href="spacerocks.html">Space Rocks</a></li>
 	<li><a href="riverrocks.html">River Rocks</a></li>
+	<li><a href="contactpage.html">Contact Us!</a></li>
   </ul>
-</nav>	
+</nav>
+
+	<img src= "TheRocksLogo3blue.png" alt="The Rocks Logo2" max width= "100%" height="75" align="center"/>
 
   </header>
 
@@ -52,7 +55,7 @@
     </tr>
 	<tr>
 		<th> Asteroid Belt Rock under $50 billion</th>
-        <th> Comet Rock over $50 billion</th>
+        <th> Comet Rock under $50 billion</th>
         <th> Moon Rocks in stock- price range $30-$600</th>
     </tr>
     <tr>
@@ -75,6 +78,7 @@
     <li><a href="index.htm">Home</a></li>
     <li><a href="spacerocks.html">Space Rocks</a></li>
 	<li><a href="riverrocks.html">River Rocks</a></li>
+	<li><a href="contactpage.html">Contact Us!</a></li>
   </ul>
 	</nav>
 </body>
