--- a/contactpage.html
+++ b/contactpage.html
@@ -104,7 +104,7 @@
                 <label for="lname">&nbspLast Name:</label>
                 <input type="text" name="lastname" placeholder="">
                 <br />
-                <label for="email">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspE-mail:</label>
+                <label for="email">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspE-mail:</label>
                 <input type="text" name="email" placeholder="">
                 <br />
                 <label for="contact reason">Reason?</label>
