--- a/contactpage.html
+++ b/contactpage.html
@@ -118,7 +118,7 @@
                 <br />
                 <label for="subject">Subject:</label>
                 <br />
-                <textarea name="subject" placeholder="Comments..." style="height:200px" width="800px"></textarea>
+                <textarea name="subject" placeholder="Comments..." style="rows="10" cols="60"></textarea>
                 <br />
 				<p> Drag bottom right corner of text box down and to the right if you need more room to type. *This only works in Chrome and Firefox. <p>
 				<p> *We are hiring new "rock collectors" and "rock hunters". Must not be afraid of space travel!* Send your info and resume to: newrockerjobs@TheRocksStore.com<p>
