--- a/contactpage.html
+++ b/contactpage.html
@@ -71,7 +71,7 @@
         }
         
 						input[type=clear]:hover {
-						    background-color: green;
+						    background-color: gray;
         }
         
         .container {
