--- a/spacerocks.html
+++ b/spacerocks.html
@@ -8,7 +8,7 @@
   <meta name="description" content="HTML5 Template">
 
 </head>
-<body style="background-color:gray">
+<body style="background-color:mediumseagreen">
 
 <header>
   <h1>
@@ -26,7 +26,7 @@
   </ul>
 </nav>
 
-	<img src= "TheRocksLogo3blue.png" alt="The Rocks Logo2" max width= "100%" height="75" align="center"/>
+	<img src= "therocksgreenlogo.png" alt="The Rocks Logo" max width= "100%" height="75" align="center"/>
 
   </header>
 
