--- a/index.htm
+++ b/index.htm
@@ -15,7 +15,7 @@
 </head>
 
 
-<body style="background-color:gray">
+<body style="background-color:mediumseagreen">
 
 <body>
 	<h1>THE ROCKS STORE</h1
@@ -31,7 +31,7 @@
                 <li><a href="contactpage.html">Contact Us!</a></li>
             </ul>
         </nav>
-	<img src= "TheRocksLogo3blue.png" alt="The Rocks Logo2" max width= "100%" height="100" align="center"/>
+	<img src= "therocksgreenlogo.png" alt="The Rocks Logo" max width= "100%" height="100" align="center"/>
 	
 	<img src= "ImagesSpacerocks/image5Comet.jpg" alt="Comet" style="width: 615px; height: 440px;" align="center"/>
 	
