--- a/riverrocks.html
+++ b/riverrocks.html
@@ -8,7 +8,7 @@
   <meta name="description" content="HTML5 Template">
 
 </head>
-<body style="background-color:gray">
+<body style="background-color:mediumseagreen">
 
 <header>
   <h1>
@@ -24,7 +24,7 @@
 	<li><a href="contactpage.html">Contact Us!</a></li>
   </ul>
   
-  <img src= "TheRocksLogo3blue.png" alt="The Rocks Logo2" max width= "100%" height="75" align="center"/>
+  <img src= "therocksgreenlogo.png" alt="The Rocks Logo" max width= "100%" height="75" align="center"/>
 
   </header>
 
