--- a/contactpage.html
+++ b/contactpage.html
@@ -5,7 +5,7 @@
 <head>
 <style>
 	body {
-		background: linear-gradient(#93B874 10%, #C9DCB9 70%, #000000 90%);
+		background-color: mediumseagreen;
 		}
 				h2 {
 					background-color: orange;
@@ -27,7 +27,7 @@
 							<li><a href="index.htm">HOME</a></li>
 							</ul>
 						</nav>
-	<img src= "TheRocksLogo3blue.png" alt= "The Rocks Logo3" max width= "100%" height= "75" align= "center"/>
+	<img src= "therocksgreenlogo.png" alt= "The Rocks Logo" max width= "100%" height= "75" align= "center"/>
 
 		<meta charset="utf-8">
 		<title> Contact Us </title>
