--- a/index.htm
+++ b/index.htm
@@ -48,6 +48,9 @@
 	<img src= "ImagesRiverRocks/Image4CountryPebbles.jpg" alt="Country Pebbles" style="width: 615px; height: 440px;" align="center"/>
 	
 	<img src= "ImagesSpacerocks/image3Nebula.jpg" alt="Nebula" style="width: 615px; height: 440px;" align="center">
+		div.ex4 {
+    padding: 25px;
+}
 </body>
 </html>
   <meta name="description" content="HTML5 Template">
