--- a/index.htm
+++ b/index.htm
@@ -15,7 +15,7 @@
 </head>
 
 
-<body style="background-color:mediumseagreen"> <padding: 25px>
+<body style="background-color:mediumseagreen"> <padding: 25px;>
 
 <body>
 	<h1>THE ROCKS STORE</h1
