--- a/index.htm
+++ b/index.htm
@@ -13,9 +13,11 @@
   <meta name="description" content="Stortemplate">
 
 </head>
+p {
+    padding: 50px 30px 50px 80px;
+}
 
-
-<body style="background-color:mediumseagreen"> padding: 25px;
+<body style="background-color:mediumseagreen"> 
 
 <body>
 	<h1>THE ROCKS STORE</h1
