--- a/index.htm
+++ b/index.htm
@@ -21,7 +21,7 @@
 	
 	<h1>THE ROCKS STORE</h1
 	
-<p> <style="text-align: center"> <h2> Welcome To The Rocks Store - where you can buy any kind of Rock that you can ever think of.  <br/> Whether it's a moon rock, martian rock, a rock the size of The Empire State building or a little tiny river rock. <br/> If we don't have it, we'll go to the moon, the next planet, or the next galaxy to get it for you!<h2></p>
+<p> <h2 style="text-align: center"> Welcome To The Rocks Store - where you can buy any kind of Rock that you can ever think of.  <br/> Whether it's a moon rock, martian rock, a rock the size of The Empire State building or a little tiny river rock. <br/> If we don't have it, we'll go to the moon, the next planet, or the next galaxy to get it for you!</h2></p>
 
 
 <nav>
