--- a/index.htm
+++ b/index.htm
@@ -16,7 +16,12 @@
 
 
 <body style="background-color:mediumseagreen"> 
-
+{   
+  width: 940px;
+  margin-top:90px;
+  margin-left: auto; 
+  margin-right: auto;
+}
 <body>
 	
 	<h1>THE ROCKS STORE</h1
