--- a/index.htm
+++ b/index.htm
@@ -16,12 +16,12 @@
 
 
 <body style="background-color:mediumseagreen"> 
-{   
+<style> {   
   width: 940px;
   margin-top:90px;
   margin-left: auto; 
   margin-right: auto;
-}
+	}</style>
 <body>
 	
 	<h1>THE ROCKS STORE</h1
