--- a/contactpage.html
+++ b/contactpage.html
@@ -11,7 +11,9 @@
 					background-color: orange;
 					}
 				h3 {
-					backgound-color: gray;
+					backgound-color: darkseagreen;
+					}
+	
 				h5	{
 					background-color: rgb(255,0,0);
 					}
