--- a/contactpage.html
+++ b/contactpage.html
@@ -11,7 +11,7 @@
 					background-color: orange;
 					}
 				h3 {
-					backgound-color: darkseagreen;
+					backgound-color: green;
 					}
 	
 				h5	{
