--- a/contactpage.html
+++ b/contactpage.html
@@ -11,7 +11,7 @@
 					background-color: orange;
 					}
 				h3 {
-					background-color: gray;
+					background-color: lightseagreen;
 					}
 	
 				h5	{
