--- a/riverrocks.html
+++ b/riverrocks.html
@@ -64,7 +64,7 @@
     </tr>
     <tr>
 
-        <td align="center"> Country Pebbles Includes: red, peach pink, gray, natural<br>white colors with natural variations.   
+        <td align="center"> Country Pebbles Includes: red, peach, pink, gray, natural<br>white colors with natural variations.   
 		<br/> Natural stones- contain some subtle gray and brown hairline grooves. $15.00/2 lbs. $245.00/34 lbs.
         </td>
         <td align="center"> Slate Rocks- natural slate <br> Contains ramdom color variations. $10.00/2 lbs. $110/24 lbs.
