--- a/riverrocks.html
+++ b/riverrocks.html
@@ -17,12 +17,14 @@
   <h2>
     River Rocks
   </h2>
+<nav>	
   <ul><h3>
     <li><a href="index.htm">Home</a></li>
     <li><a href="spacerocks.html">Space Rocks</a></li>
 	<li><a href="riverrocks.html">River Rocks</a></li>
 	<li><a href="contactpage.html">Contact Us!</a></li>
   </ul></h3>
+	</nav>
   
   <img src= "therocksgreenlogo.png" alt="The Rocks Logo" max width= "100%" height="75" align="center"/>
 
