--- a/spacerocks.html
+++ b/spacerocks.html
@@ -26,7 +26,7 @@
 	 </ul></h3>
 </nav>
 
-	<img src= "therocksgreenlogo.png" alt="The Rocks Logo" max width= "100%" height="75" align="center"/>
+	<img src= "TheRocksLogoGreen2.png" alt="The Rocks Logo" max width= "100%" height="75" align="center"/>
 
   </header>
 
