--- a/contactpage.html
+++ b/contactpage.html
@@ -29,7 +29,7 @@
 							<li><a href="index.htm">HOME</a></li>
 							</ul>
 						</nav>
-	<img src= "therocksgreenlogo.png" alt= "The Rocks Logo" max width= "100%" height= "75" align= "center"/>
+	<img src= "TheRocksLogoGreen2.png" alt= "The Rocks Logo" max width= "100%" height= "75" align= "center"/>
 
 		<meta charset="utf-8">
 		<title> Contact Us </title>
