--- a/riverrocks.html
+++ b/riverrocks.html
@@ -6,9 +6,11 @@
 
   <title>River Rocks </title>
   <meta name="description" content="HTML5 Template">
-
+	<link rel="stylesheet" type="text/css"/>
+  	<meta name="description" content="HTML5 Template">
+	<link rel="stylesheet" type="text/css" href="style.css" />
 </head>
-<body style="background-color:mediumseagreen">
+
 
 <header>
   <h1>
