--- a/contactpage.html
+++ b/contactpage.html
@@ -33,7 +33,7 @@
 
 		<meta charset="utf-8">
 		<title> Contact Us </title>
-		<link rel="stylesheet" type="text/css" href="../style.css" />
+		<link rel="stylesheet" type="text/css" href="style.css" />
 		<script type="text/javascript" src="/javascript.js"></script>
 		<style type="text/css">
         <style> input[type=text],
