--- a/contactpage.html
+++ b/contactpage.html
@@ -64,7 +64,7 @@
         
 						input[type=clear] {
 						    background-color: gray;
-						    color: blue;
+						    color: green;
 						    padding: 12px 20px;
 						    border: none;
 						    border-radius: 4px;
