--- a/riverrocks.html
+++ b/riverrocks.html
@@ -16,7 +16,7 @@
   <h1> <td align:"center">
     The Rocks Store
   </h1>
-  <h2> 
+  <h2 style="text-align: center">
     River Rocks
   </h2>
 <nav>	
