Center and change font size

--- a/riverrocks.html
+++ b/riverrocks.html
@@ -16,9 +16,9 @@
   <h1> <td align:"center">
     The Rocks Store
   </h1>
-  <h2 style="text-align: center">
+  <h1> style="text-align: center">
     River Rocks
-  </h2>
+	</h1>
 <nav>	
   <ul><h3>
     <li><a href="index.htm">Home</a></li>
