--- a/riverrocks.html
+++ b/riverrocks.html
@@ -16,7 +16,7 @@
   <h1> <td align:"center">
     The Rocks Store
   </h1>
-  <h1> style="text-align: center">
+  <h1 style="text-align: center">
     River Rocks
 	</h1>
 <nav>	
