--- a/riverrocks.html
+++ b/riverrocks.html
@@ -16,15 +16,7 @@
   <h1> <td align:"center">
     The Rocks Store
   </h1>
-  <h1 style="text-align: center" div {
-    border: 1px solid black;
-    background-color: lightblue;
-    padding-top: 50px;
-    padding-right: 30px;
-    padding-bottom: 50px;
-    padding-left: 80px;
-}>
-	  
+  <h1 style="text-align: center">	  
     River Rocks
 	</h1>
 <nav>	
