changes for assignment 6

--- a/riverrocks.html
+++ b/riverrocks.html
@@ -5,30 +5,34 @@
   <meta charset="utf-8">
 
   <title>River Rocks </title>
+  <link rel="stylesheet" type="text/css"/>
   <meta name="description" content="HTML5 Template">
-	<link rel="stylesheet" type="text/css"/>
-  	
 	<link rel="stylesheet" type="text/css" href="style.css" />
+	
+<img src= "TheRocksLogoGreen2.png" alt="The Rocks Logo" max width= "100%" height="100" align="center"/>
+
 </head>
+<body>
 
 
-<header> 
-  <h1> <td align:"center">
+
+<header>
+  <h1>
     The Rocks Store
   </h1>
-  <h1 style="text-align: center">	  
-    River Rocks
-	</h1>
-<nav>	
+  <h2> <text align="center">
+    River Rocks 
+  </h2>
+  <nav>
   <ul><h3>
     <li><a href="index.htm">Home</a></li>
     <li><a href="spacerocks.html">Space Rocks</a></li>
 	<li><a href="riverrocks.html">River Rocks</a></li>
 	<li><a href="contactpage.html">Contact Us!</a></li>
   </ul></h3>
-	</nav>
+  </nav>
   
-  <img src= "TheRocksLogoGreen2.png" alt="The Rocks Logo" max width= "100%" height="75" align="center"/>
+  
 
   </header>
 
@@ -68,7 +72,7 @@
     </tr>
     <tr>
 
-        <td align="center"> Country Pebbles Includes: red, peach, pink, gray, natural<br>white colors with natural variations.   
+        <td align="center"> Country Pebbles Includes: red, peach pink, gray, natural<br>white colors with natural variations.   
 		<br/> Natural stones- contain some subtle gray and brown hairline grooves. $15.00/2 lbs. $245.00/34 lbs.
         </td>
         <td align="center"> Slate Rocks- natural slate <br> Contains ramdom color variations. $10.00/2 lbs. $110/24 lbs.
