--- a/spacerocks.html
+++ b/spacerocks.html
@@ -6,28 +6,36 @@
 
   <title>Space Rocks </title>
   <meta name="description" content="HTML5 Template">
-	<link rel="stylesheet" type="text/css"/>
-  	<link rel="stylesheet" type="text/css" href="style.css" />
-</head>
+	<link rel="stylesheet" type="text/css" href="style.css" />
+    <style type="text/css">
+
+	
+	</head>
+<body>
+<style> 
 
 
+</style>					
 <header>
+
+<img src= "TheRocksLogoGreen2.png" alt="The Rocks Logo" max width= "100%" height="100" align="center"/>
+  
   <h1>
     The Rocks Store
   </h1>
-  <h1 style="text-align: center">
-    Space Rocks
-  </h1>
- <nav>
- <ul><h3>
+  <h2>
+   <style="text-align: center">Space Rocks
+  </h2>
+ <nav><h3>
+ <ul>
     <li><a href="index.htm">Home</a></li>
     <li><a href="spacerocks.html">Space Rocks</a></li>
 	<li><a href="riverrocks.html">River Rocks</a></li>
 	<li><a href="contactpage.html">Contact Us!</a></li>
-	 </ul></h3>
+  </ul></h3>
 </nav>
 
-	<img src= "TheRocksLogoGreen2.png" alt="The Rocks Logo" max width= "100%" height="75" align="center"/>
+	
 
   </header>
 
@@ -56,7 +64,7 @@
     </tr>
 	<tr>
 		<th> Asteroid Belt Rock under $50 billion</th>
-        <th> Comet Rock over $50 billion</th>
+        <th> Comet Rock under $50 billion</th>
         <th> Moon Rocks in stock- price range $30-$600</th>
     </tr>
     <tr>
@@ -80,7 +88,7 @@
     <li><a href="spacerocks.html">Space Rocks</a></li>
 	<li><a href="riverrocks.html">River Rocks</a></li>
 	<li><a href="contactpage.html">Contact Us!</a></li>
-	</ul></h3>
+  </ul></h3>
 	</nav>
 </body>
 </html>
