--- a/index.htm
+++ b/index.htm
@@ -9,63 +9,73 @@
   <title>Willie's Homepge</title>
 		
 <title>The Rocks Store</title>
+  
   <link rel="stylesheet" type="text/css" href="style.css" />
-  <meta name="description" content="Stortemplate">
+    <style type="text/css">
+ 
+	
+				
+				
+</style>
+
+
 
 </head>
+<img src= "TheRocksLogoGreen2.png" alt="The Rocks Logo2" max width= "100%" height="100" align="center"/>
+
+<body >
+ 
+ 
 
 
-<body> 
 
-	
+<body>
 	<h1>THE ROCKS STORE</h1
 	
-<p> <h2 style="text-align: center"> Welcome To The Rocks Store - where you can buy any kind of Rock that you can ever think of.  <br/> Whether it's a moon rock, martian rock, a rock the size of The Empire State building or a little tiny river rock. <br/> If we don't have it, we'll go to the moon, the next planet, or the next galaxy to get it for you!</h2></p>
+<p> <h2 style="text-align: center"> Welcome To The Rocks Store- where you can buy any kind of Rock that you can ever think of.  <br/> Whether it's a moon rock, martian rock, a rock the size of The Empire State building or a little tiny river rock. <br/> If we don't have it, we'll go to the moon, the next planet, or the next galaxy to get it for you!</style></h2></p>
 
 
 <nav>
-           <ul><h3> 
+           <ul> <h3>
                 <li><a href="index.htm">Home</a></li>
                 <li><a href="spacerocks.html">Space Rocks</a></li>
                 <li><a href="riverrocks.html">River Rocks</a></li>
                 <li><a href="contactpage.html">Contact Us!</a></li>
-		   </ul></h3>
+				</h3>  </ul>
         </nav>
 	
-	<img src= "TheRocksLogoGreen2.png" alt="The Rocks Logo" max width= "100%" height="75" align="center"/>
 	
-	<img src= "ImagesSpacerocks/image5Comet.jpg" alt="Comet" style="width: 613px; height: 440px;" align="center"/>
+	<img src= "ImagesSpacerocks/image5Comet.jpg" alt="Comet" style="width: 612px; height: 440px;" align="center"/>
 	
-	<img src= "IgneousRocks.jpeg" alt="Igneous Rock" style="width: 613px; height: 440px;" align="center"/>
+	<img src= "IgneousRocks.jpeg" alt="Igneous Rock" style="width: 612px; height: 440px;" align="center"/>
 	
-	<img src= "ImagesSpacerocks/image2Asteroid.jpg" alt="Asteroid" style="width: 613px; height: 440px;" align="center"/>
+	<img src= "ImagesSpacerocks/image2Asteroid.jpg" alt="Asteroid" style="width: 610px; height: 440px;" align="center"/>
 	
-	<img src= "RocksImageLogo.jpg" alt="Rocks Image Logo" style="width: 613px; height: 440px;" align="center"/>
+	<img src= "RocksImageLogo.jpg" alt="Rocks Image Logo" style="width: 610px; height: 440px;" align="center"/>
 	
-	<img src= "ImagesRiverRocks/Image5SlateRocks.jpg" alt="Slate Rocks" style="width: 613px; height: 440px;" align="center">
+	<img src= "ImagesRiverRocks/Image5SlateRocks.jpg" alt="Slate Rocks" style="width: 610px; height: 440px;" align="center">
 	
-	<img src= "2-2-rock-png-file.png" alt="face rock" style="width: 613px; height: 440px;" align="center"/>
+	<img src= "2-2-rock-png-file.png" alt="face rock" style="width: 610px; height: 440px;" align="center"/>
 	
-	<img src= "ImagesRiverRocks/Image4CountryPebbles.jpg" alt="Country Pebbles" style="width: 613px; height: 440px;" align="center"/>
+	<img src= "ImagesRiverRocks/Image4CountryPebbles.jpg" alt="Country Pebbles" style="width: 610px; height: 440px;" align="center"/>
 	
-	<img src= "ImagesSpacerocks/image3Nebula.jpg" alt="Nebula" style="width: 613px; height: 440px;" align="center">
-		
+	<img src= "ImagesSpacerocks/image3Nebula.jpg" alt="Nebula" style="width: 610px; height: 440px;" align="center">
 </body>
 </html>
   <meta name="description" content="HTML5 Template">
 
 </head>
 <nav>
-<ul><h3>
+<ul> <h3>
     <li><a href="index.htm">Home</a></li>
     <li><a href="spacerocks.html">Space Rocks</a></li>
 	<li><a href="riverrocks.html">River Rocks</a></li>
 	<li><a href="contactpage.html">Contact Us!</a></li>
-	</ul></h3>
+  </h3> </ul>
 	</nav>
 
 <body>
-<p><h6> Willie's homepage<h6></p>
+<p><h5>Willie's Homepage<h5></p>
 =======
 </body>
 </html>
