--- a/spacerocks.html
+++ b/spacerocks.html
@@ -28,10 +28,11 @@
   </h2>
  <nav><h3>
  <ul>
-    <li><a href="index.htm">Home</a></li>
-    <li><a href="spacerocks.html">Space Rocks</a></li>
-	<li><a href="riverrocks.html">River Rocks</a></li>
-	<li><a href="contactpage.html">Contact Us!</a></li>
+   
+	   <li><a href="index.htm">Home</a></li>
+	   <li><a href="riverrocks.html">River Rocks</a></li>
+    	   <li><a href="spacerocks.html">Space Rocks</a></li>
+  	   <li><a href="contactpage.html">Contact Us!</a></li>
   </ul></h3>
 </nav>
 
@@ -84,10 +85,11 @@
 </div>
 <nav>
 <ul><h3>
-    <li><a href="index.htm">Home</a></li>
-    <li><a href="spacerocks.html">Space Rocks</a></li>
-	<li><a href="riverrocks.html">River Rocks</a></li>
-	<li><a href="contactpage.html">Contact Us!</a></li>
+    
+	   <li><a href="index.htm">Home</a></li><li>
+	   <a href="riverrocks.html">River Rocks</a></li>
+    	   <li><a href="spacerocks.html">Space Rocks</a></li>
+	   <li><a href="contactpage.html">Contact Us!</a></li>
   </ul></h3>
 	</nav>
 </body>
