--- a/ContactPage.html
+++ b/ContactPage.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <html>
-
+<img src= "TheRocksLogoGreen2.png" alt= "The Rocks Logo" max width= "100%" height= "100" align= "center"/>
 <head>
 
-<img src= "TheRocksLogoGreen2.png" alt= "The Rocks Logo" max width= "100%" height= "100" align= "center"/>
+
 <style>
 	body {
 		background: linear-gradient(#93B874 10%, #C9DCB9 70%, #000000 90%);
@@ -27,8 +27,8 @@
 					<nav>
 						<ul> <h3>
 							<li><a href="index.htm">HOME</a></li>
-							</ul>
-						</h3> </nav>
+							</h3></ul>
+						 </nav>
 	
 
 		<meta charset="utf-8">
