--- a/riverrocks.html
+++ b/riverrocks.html
@@ -57,7 +57,7 @@
         </td>
         <td align="center">Decorative River Rocks <br/>  Specify color- black red, white or yellow or mixed.$5.00/2.5 lbs
         </td>
-        <td align="center">Eldorado Stones - full sized stones with sizes up to 15", <br/>individually selected for their distinct irregularity and unique <br>textural nuances water-worn into the surface, for walls and fireplace application. $25/ sq./ft.
+        <td align="center">Eldorado Stones - full sized stones with sizes up to 15", <br/>individually selected for their distinct irregularity and unique <br>textural nuances water-worn into the surface, <br/>for walls and fireplace application. $25/ sq./ft.
         </td>
     </tr>
 	<tr>
