--- a/ContactPage.html
+++ b/ContactPage.html
@@ -63,7 +63,7 @@
         }
         
         input[type=clear] {
-            background-color: flashingblue;
+            background-color: blue;
             color: blue;
             padding: 12px 20px;
             border: none;
