--- a/ContactPage.html
+++ b/ContactPage.html
@@ -64,7 +64,7 @@
         
         input[type=clear] {
             background-color: blue;
-            color: blue;
+            color: white;
             padding: 12px 20px;
             border: none;
             border-radius: 4px;
