--- a/ContactPage.html
+++ b/ContactPage.html
@@ -73,7 +73,7 @@
         }
         
         input[type=clear]:hover {
-            background-color: green;
+            background-color: blue;
         }
         
         .container {
