--- a/contactpage.html
+++ b/contactpage.html
@@ -70,7 +70,9 @@
 						    border: none;
 						    border-radius: 4px;
 						    cursor: pointer;
-						   
+						    width: 20em;  height: 2em;
+}
+			
         }
         
 						input[type=clear]:hover {
