--- a/contactpage.html
+++ b/contactpage.html
@@ -126,8 +126,9 @@
                 <br />
 				<p> Drag bottom right corner of text box down and to the right if you need more room to type. *This only works in Chrome and Firefox. <p>
 				<p> *We are hiring new "rock collectors" and "rock hunters". Must not be afraid of space travel!* Send your info and resume to: newrockerjobs@TheRocksStore.com<p>
-                <input type="submit" value="Submit">
-                <input type="reset" value="Clear"> 
+               			
+					<input type = "submit" name = "submit" value = "Submit" class = "btn"/>
+					<input type = "button" id = "btnReset" name = "reset" value = "Reset" class = "btn"/>
             </form>
         </div>
 					<nav>
