--- a/contactpage.html
+++ b/contactpage.html
@@ -128,7 +128,7 @@
 				<p> *We are hiring new "rock collectors" and "rock hunters". Must not be afraid of space travel!* Send your info and resume to: newrockerjobs@TheRocksStore.com<p>
                			
 					<input type = "submit" name = "submit" value = "Submit" class = "btn"/>
-					<input type = "button" id = "btnReset" name = "reset" value = "Reset" class = "btn"/>
+					<input type = "button" id = "btnReset" name = "reset" value = "Clear" class = "btn"/>
             </form>
         </div>
 					<nav>
