--- a/contactpage.html
+++ b/contactpage.html
@@ -78,7 +78,7 @@
 						    background-color: blue;
         }
         
-        .container {
+        container {
             border-radius: 5px;
             background-color: darkseagreen;
             padding: 20px;
