--- a/contactpage.html
+++ b/contactpage.html
@@ -64,7 +64,7 @@
         }
         
 						input[type=reset] {
-						    background-color: darkseagreen;
+						    background-color: fuscia;
 						    color: white;
 						    padding: 12px 20px;
 						    border: none;
