--- a/contactpage.html
+++ b/contactpage.html
@@ -64,7 +64,7 @@
         }
         
 						input[type=reset] {
-						    background-color: fuscia;
+						    background-color: pink;
 						    color: white;
 						    padding: 12px 20px;
 						    border: none;
@@ -78,7 +78,7 @@
 						    background-color: lightgreen;
         }
         
-        container {
+        .container {
             border-radius: 5px;
             background-color: darkseagreen;
             padding: 20px;
