--- a/contactpage.html
+++ b/contactpage.html
@@ -65,7 +65,7 @@
         
 						input[type=reset] {
 						    background-color: pink;
-						    color: white;
+						    color: black;
 						    padding: 12px 20px;
 						    border: none;
 						    border-radius: 4px;
