--- a/contactpage.html
+++ b/contactpage.html
@@ -136,6 +136,15 @@
 							<li><a href="index.htm">HOME</a></li>
 							</h3> </ul>
 						</nav>
+			    
+			 	<p align="center" <h3> Today is: 
+	  
+	 			</p>  <p align="center" id="datetime" </p>
+
+		<script>
+			document.getElementById("datetime").innerHTML = Date();
+		</script> <br/>
+				(refresh page to update current time) </h3>
 </body>
 
 </html>
