--- a/index.htm
+++ b/index.htm
@@ -75,8 +75,17 @@
   </h3> </ul>
 	</nav>
 
+	<p align="center" <h3> Today is: 
+	  
+	 </p>  <p align="center" id="datetime" </p>
+
+	<script>
+		document.getElementById("datetime").innerHTML = Date();
+	</script> <br/>
+		(refresh page to update current time) </h3>
+
 <body>
-<p><h5>Willie's Homepage<h5></p>
+<p><h5>TheRocksHomepage<h5></p>
 =======
 </body>
 </html>
