--- a/riverrocks.html
+++ b/riverrocks.html
@@ -93,5 +93,13 @@
   </ul></h3>
 	</nav>
 </div>
+	<p align="center" <h3> Today is: 
+	  
+	 </p>  <p align="center" id="datetime" </p>
+
+	<script>
+		document.getElementById("datetime").innerHTML = Date();
+	</script> <br/>
+		(refresh page to update current time) </h3>
 </body>
 </html>
