date/time addition

--- a/spacerocks.html
+++ b/spacerocks.html
@@ -92,5 +92,14 @@
 	   <li><a href="contactpage.html">Contact Us!</a></li>
   </ul></h3>
 	</nav>
+	   
+	 <p align="center" <h3> Today is: 
+	  
+	 </p>  <p align="center" id="datetime" </p>
+
+	<script>
+		document.getElementById("datetime").innerHTML = Date();
+	</script> <br/>
+		(refresh page to update current time) </h3>
 </body>
 </html>
