--- a/contactpage.html
+++ b/contactpage.html
@@ -143,7 +143,7 @@
 
 		<script>
 			function dateAndTime(){
-			  document.getElementById("date").innerHTML =  Date();
+			  document.getElementById("datetime").innerHTML =  Date();
 			}
 			dateTimer = setInterval(dateAndTime, 1000);
 
