--- a/index.htm
+++ b/index.htm
@@ -38,7 +38,7 @@
 }
 
 .dropdown {
-    float: none;
+    float: right;
     position: relative;
     display: inline-block;
     
@@ -51,7 +51,7 @@
     min-width: 160px;
     overflow: auto;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    left: 0;
+    left: 1;
     z-index: 1;
 }
 
