--- a/index.htm
+++ b/index.htm
@@ -38,7 +38,7 @@
 }
 
 .dropdown {
-    float: right;
+    float: left;
     position: relative;
     display: inline-block;
     
@@ -46,12 +46,14 @@
 
 .dropdown-content {
     display: none;
-    position: absolute;
+    position: fixed;
+    top: 0;
+    left: 0;
     background-color: #f9f9f9;
     min-width: 160px;
     overflow: auto;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    left: 1;
+    left: 0;
     z-index: 1;
 }
 
