--- a/index.htm
+++ b/index.htm
@@ -40,15 +40,16 @@
 .dropdown {
     float: left;
     position: relative;
+    top: 0;
+    left: 0;
     display: inline-block;
     
 }
 
 .dropdown-content {
     display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
+    position: relative;
+    
     background-color: #f9f9f9;
     min-width: 160px;
     overflow: auto;
