--- a/index.htm
+++ b/index.htm
@@ -39,7 +39,7 @@
 
 .dropdown {
     float: left;
-    position: relative;
+    position: fixed;
     top: 0;
     left: 0;
     display: inline-block;
