--- a/index.htm
+++ b/index.htm
@@ -39,9 +39,9 @@
 
 .dropdown {
     float: left;
-    position: static;
-    top: 0;
-    left: 1;
+     position: absolute;
+    top: 80px;
+    right: 0;
     display: inline-block;
     
 }
