--- a/index.htm
+++ b/index.htm
@@ -38,10 +38,10 @@
 }
 
 .dropdown {
-    float: left;
+    
      position: absolute;
     top: 80px;
-    right: 0;
+    leftt: 0;
     display: inline-block;
     
 }
