--- a/index.htm
+++ b/index.htm
@@ -256,7 +256,7 @@ window.onclick = function(event) {
 }
 </script>
 
-<p> <h2 style="text-align: center" "width: 120px;"> Welcome To The Rocks Store- where you can buy any kind of Rock that you can ever think of.  <br/> Whether it's a moon rock, martian rock, a rock the size of The Empire State building or a little tiny river rock. <br/> If we don't have it, we'll go to the moon, the next planet, or the next galaxy to get it for you!</style></h2></p>
+<p> <h2 style="text-align: center" "width: 100%;"> Welcome To The Rocks Store- where you can buy any kind of Rock that you can ever think of.  <br/> Whether it's a moon rock, martian rock, a rock the size of The Empire State building or a little tiny river rock. <br/> If we don't have it, we'll go to the moon, the next planet, or the next galaxy to get it for you!</style></h2></p>
 
 
 
