--- a/index.htm
+++ b/index.htm
@@ -179,7 +179,7 @@ body {font-family: Verdana,sans-serif;}
 <div class= "mySlides fade">
   <div class= "numbertext">4 / 5</div>
   <img src= "ImagesRiverRocks/Image5SlateRocks.jpg" style="width:100%">
-  <div class= "text">Asteroid Rocks</div>
+  <div class= "text">Slate Rocks</div>
 </div>
 
 
@@ -256,7 +256,7 @@ window.onclick = function(event) {
 }
 </script>
 
-<p> <h2 style="text-align: center" "width: 100%;"> Welcome To The Rocks Store- where you can buy any kind of Rock that you can ever think of.  <br/> Whether it's a moon rock, martian rock, a rock the size of The Empire State building or a little tiny river rock. <br/> If we don't have it, we'll go to the moon, the next planet, or the next galaxy to get it for you!</style></h2></p>
+<p> <h2 style="text-align: center" "width: 250px;"> Welcome To The Rocks Store- where you can buy any kind of Rock that you can ever think of.  <br/> Whether it's a moon rock, martian rock, a rock the size of The Empire State building or a little tiny river rock. <br/> If we don't have it, we'll go to the moon, the next planet, or the next galaxy to get it for you!</style></h2></p>
 
 
 
