--- a/index.htm
+++ b/index.htm
@@ -90,9 +90,9 @@ body {font-family: Verdana,sans-serif;}
 /* Slideshow container */
 .slideshow-container {
   max-width: 650px;
-  max-height: 600px;
+  max-height: 500px;
   position: relative;
-  margin: 10%;
+  margin: auto;
 }
 
 /* Caption text */
