--- a/index.htm
+++ b/index.htm
@@ -91,7 +91,7 @@ body {font-family: Verdana,sans-serif;}
 .slideshow-container {
   max-width: 650px;
   max-height: 500px;
-  position: relative;
+  position: absolute;
   margin: auto;
 }
 
