--- a/index.htm
+++ b/index.htm
@@ -92,7 +92,7 @@ body {font-family: Verdana,sans-serif;}
   max-width: 650px;
   max-height: 500px;
   position: relative;
-  margin: auto;
+  margin: 100px;
 }
 
 /* Caption text */
