--- a/index.htm
+++ b/index.htm
@@ -94,6 +94,15 @@ body {font-family: Verdana,sans-serif;}
   position: relative;
   margin: auto;
 }
+.crop {
+ height: 300px;
+ width: 400px;
+ overflow: hidden;
+}
+.crop img {
+ height: auto;
+ width: 400px;
+}
 
 /* Caption text */
 .text {
