--- a/index.htm
+++ b/index.htm
@@ -95,7 +95,7 @@ body {font-family: Verdana,sans-serif;}
  overflow: hidden;
 }
 .crop img {
- height: auto;
+ height: 400px;
  width: 400px;
 
 .slideshow-container {
