--- a/index.htm
+++ b/index.htm
@@ -94,6 +94,7 @@ body {font-family: Verdana,sans-serif;}
   max-height: 500px;
   position: relative;
   margin: auto;
+  overflow: hidden;
 }
 
 /* Caption text */
