--- a/index.htm
+++ b/index.htm
@@ -62,6 +62,7 @@
 }
 
 .dropdown-content a {
+    .dropdown-content a:hover {background-color: #f1f1f1}
     color: black;
     padding: 12px 16px;
     text-decoration: none;
