--- a/index.htm
+++ b/index.htm
@@ -70,7 +70,8 @@
 }
 
 .dropdown a:hover {background-color: #f1f1f1}
-
+.dropdown:hover .dropdown-content {
+    display: block;
 .show {display:block;}
 </style>
 <body >
