--- a/spacerocks.html
+++ b/spacerocks.html
@@ -64,7 +64,8 @@
 }
 
 .dropdown a:hover {background-color: #f1f1f1}
-
+.dropdown:hover .dropdown-content {
+    display: block;
 .show {display:block;}
 </style>
 </head>
