--- a/contactpage.html
+++ b/contactpage.html
@@ -65,7 +65,8 @@
 }
 
 .dropdown a:hover {background-color: #f1f1f1}
-
+.dropdown:hover .dropdown-content {
+    display: block;
 .show {display:block;}
 </style>
 </head>
