--- a/riverrocks.html
+++ b/riverrocks.html
@@ -108,7 +108,7 @@
         <td align="center"> <img src= "ImagesRiverRocks/Image3EldoradoStone.jpg" alt="EldoradoStone" style="width: 250px; height: 250px;"></td>
     </tr>
     <tr>
-        <td align="center">River Rock Stepping Stones. A set of three sells for $29.95.<br> Each stone is 14" dia. x -1/2"H. 
+        <td align="center">River Rock Stepping Stones. A set of three sells for $29.95.<br> Each stone is 14" dia. x - 1"H. 
         </td>
         <td align="center">Decorative River Rocks <br/>  Specify color- black red, white or yellow or mixed.$5.00/2.5 lbs
         </td>
